<resources>
    <string name="app_name">ProductsListApp</string>
    <string name="name">Наименование:</string>
    <string name="price">Цена в рублях:</string>
    <string name="count">Количество товара:</string>
    <string name="choose_action">Выберите действие:</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="price_iItem">%s руб.</string>
    <string name="count_item">%s шт.</string>
    <string name="error_create_product">Описание товара заполнено некорректно.
        Товар не создан.</string>
    <string name="save">Сохранить</string>
    <string name="changes_saved">Изменения сохранены</string>
</resources>
