<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space"
    app:cardBackgroundColor="@color/cardViewBackground"
    app:cardCornerRadius="@dimen/space"
    app:cardElevation="@dimen/space">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selector"
        android:orientation="vertical"
        android:padding="@dimen/space">

        <TextView
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/item_name"
            style="@style/TextSubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Some Product"/>

        <LinearLayout
            style="@style/DividerHorizontalStyle"/>

        <TextView
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/item_price"
            style="@style/TextSubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="100.98 руб."/>

        <LinearLayout
            style="@style/DividerHorizontalStyle"/>

        <TextView
            style="@style/TextTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count"/>

        <TextView
            android:id="@+id/item_count"
            style="@style/TextSubtitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="200 шт."/>

    </LinearLayout>

</android.support.v7.widget.CardView>